transport_test_errors.txt
cargo : warning: profiles for the non root 
package will be ignored, specify profiles at 
the workspace root:
At line:1 char:1
+ cargo test -p blindwire-transport --test 
e2e_test test_rate_limiting_ ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: ( 
   warning: profil...workspace root::String)  
   [], RemoteException
    + FullyQualifiedErrorId : NativeCommandEr 
   ror
 
package:   
C:\Users\Loritamus\Desktop\Epherema 
Text\blindwire-cli\Cargo.toml
workspace: 
C:\Users\Loritamus\Desktop\Epherema 
Text\Cargo.toml
warning: profiles for the non root package 
will be ignored, specify profiles at the 
workspace root:
package:   
C:\Users\Loritamus\Desktop\Epherema 
Text\blindwire-core\Cargo.toml
workspace: 
C:\Users\Loritamus\Desktop\Epherema 
Text\Cargo.toml
warning: profiles for the non root package 
will be ignored, specify profiles at the 
workspace root:
package:   
C:\Users\Loritamus\Desktop\Epherema 
Text\blindwire-server\Cargo.toml
workspace: 
C:\Users\Loritamus\Desktop\Epherema 
Text\Cargo.toml
warning: profiles for the non root package 
will be ignored, specify profiles at the 
workspace root:
package:   
C:\Users\Loritamus\Desktop\Epherema 
Text\blindwire-transport\Cargo.toml
workspace: 
C:\Users\Loritamus\Desktop\Epherema 
Text\Cargo.toml
   Compiling blindwire-transport v0.1.0 
(C:\Users\Loritamus\Desktop\Epherema 
Text\blindwire-transport)
error[E0277]: `SecureSession` doesn't 
implement `Debug`
   --> 
blindwire-transport\tests\e2e_test.rs:136:81
    |
136 |         other => panic!("Expected 
RateLimitExceeded on 11th attempt, got {:?}", 
other),
    |                                         
                                        ^^^^^ 
`SecureSession` cannot be formatted using 
`{:?}` because it doesn't implement `Debug`
    |
    = help: the trait `Debug` is not 
implemented for `SecureSession`, which is 
required by `Result<SecureSession, 
TransportError>: Debug`
    = help: the trait `Debug` is implemented 
for `Result<T, E>`
    = note: this error originates in the 
macro `$crate::const_format_args` which comes 
from the expansion of the macro `panic` (in 
Nightly builds, run with -Z macro-backtrace 
for more info)

For more information about this error, try 
`rustc --explain E0277`.
error: could not compile 
`blindwire-transport` (test "e2e_test") due 
to 1 previous error
